--- a/STSEval/management/templates/management/setup_cameras.html
+++ b/STSEval/management/templates/management/setup_cameras.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div align="center" style="margin:10px;padding:0">
-    {{session_name}}<br/>
+    <h3>{{session_name}}</h3><br/>
     <div>
         <div id="divCameras" style="vertical-align: top;padding:3px;display:inline-block;margin-right:30px;">
 		    <div id="divCameraHeader" style="padding-bottom:5px;font-size:22px;font-weight:bold;text-align:center">Cameras</div>
