--- a/STSEval/app/templates/app/index.html
+++ b/STSEval/app/templates/app/index.html
@@ -18,10 +18,10 @@
     <div class="container-fluid body-content">
         <div align="center">
             <a href="/management/setup_competition/"><button id="btnAdmin" name="btnAdmin" type="button" class="btn btn-main mt-2" style="width:250px">Administrator</button></a><br/>
-             <a href="/account/login_judge/"><button id="btnJudge" name="btnJudge" type="button" class="btn btn-main mt-2" style="width:250px">Judge</button></a><br/>
-            <a href="/account/login_coach/"><button id="btnCoach" name="btnCoach" type="button" class="btn btn-main mt-2" style="width:250px">Coach</button></a><br/>
-            <a href="/account/login_camera/"><button id="btnCamera" name="btnCamera" type="button" class="btn btn-main mt-2" style="width:250px">Camera</button></a><br/>
-             <a href="/select_session/"><button id="btnSpectator" name="btnSpectator" type="button"class="btn btn-main mt-2" style="width:250px">Spectator</button></a><br/>
+             <a href="/account/login_judge/"><button id="btnJudge" name="btnJudge" type="button" class="btn btn-main mt-4" style="width:250px">Judge</button></a><br/>
+            <a href="/account/login_coach/"><button id="btnCoach" name="btnCoach" type="button" class="btn btn-main mt-4" style="width:250px">Coach</button></a><br/>
+            <a href="/account/login_camera/"><button id="btnCamera" name="btnCamera" type="button" class="btn btn-main mt-4" style="width:250px">Camera</button></a><br/>
+             <a href="/select_session/"><button id="btnSpectator" name="btnSpectator" type="button"class="btn btn-main mt-4" style="width:250px">Spectator</button></a><br/><br/>
              <div align="center">STS Results &copy; {{ year }}</div>
         </div>
     </div>
