--- a/STSEval/management/templates/management/session_form.html
+++ b/STSEval/management/templates/management/session_form.html
@@ -23,6 +23,7 @@
                 </div>
                 <div class="d-flex">
                 <div class="align-self-center">$</div><div>{{ form.spectator_fee }}</div></div>
+                <div id="divSpectatorEarnings" style="font-size:.7rem"></div>
                 {{form.spectator_fee.errors}}
                 {% for err in form.non_field_errors %}
                     <div class="errorlist">{{ err }}</div>
@@ -36,3 +37,19 @@
         <button href="#" id="btnSessionCancel" type="button" class="btn btn-red" data-dismiss="modal">Cancel</button>
     </div>
 </form>
+<script type="text/javascript">
+    $("#id_spectator_fee").keyup(SpectatorFeeChanged);
+    SpectatorFeeChanged();
+    function SpectatorFeeChanged() {
+        let fee = $("#id_spectator_fee").val();
+        let our = 0
+        our = Number(fee) * .3;
+        if (our < 3)
+            our = 3;
+        our = fee - our;
+        our = our.toFixed(2);
+        if (our < 0)
+            our = 0;
+        $("#divSpectatorEarnings").html("You earn $" + our + " per spectator");
+    }
+</script>
