--- a/STSEval/management/templates/management/setup_judges.html
+++ b/STSEval/management/templates/management/setup_judges.html
@@ -3,7 +3,7 @@
 {% load staticfiles %}
 {% block content %}
 <div align="center" style="margin:10px;padding:0">
-    {{session_name}}<br/>
+    <h3>{{session_name}}</h3><br/>
     JUDGES
     <div id="divJudges" style="max-width:800px">
 
