--- a/STSEval/management/templates/management/setup_rotations.html
+++ b/STSEval/management/templates/management/setup_rotations.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 {% block content %}
 <div align="center" style="margin:10px;padding:0">
-    {{session_name}}<br/>
+    <h3>{{session_name}}</h3><br/>
     <div>
         <div id="divRotationsHeader" style="padding-bottom:5px;font-size:22px;font-weight:bold;text-align:center">Rotations <span style="font-size:12px;font-weight:normal">(drag to order)</span></div>
         <div class="d-flex justify-content-center">
