--- a/STSEval/management/templates/management/spectator_management.html
+++ b/STSEval/management/templates/management/spectator_management.html
@@ -2,8 +2,7 @@
 
 {% block content %}
 <div align="center" style="margin:10px;padding:0">
-    {{session.full_name}}<br/>
-    <br/>
+    <h3>{{session.full_name}}</h3><br/>
     <div class="row no-gutters">
         <div class="col-3 pr-4" align="right">
              <h2>Session Access Code</h2>
