--- a/STSEval/management/templates/management/spectator_management.html
+++ b/STSEval/management/templates/management/spectator_management.html
@@ -17,12 +17,12 @@
                     <button href="#" id="btnSave" type="button" class="btn btn-main management-button mt-2" onclick="Save()">Update</button>
                 </div>
                 <div class="pl-4 pr-4" align="center">
-                    Redeemed<br/>
-                    {{session.access_code_used}}
-                </div>
-                <div class="pl-4 pr-4" align="center">
                     Quantity<br/>
                     {{session.access_code_total}}
+                </div>
+                <div class="pl-4 pr-4" align="center">
+                    Available<br/>
+                    {{codes_available}}
                 </div>
                 <div class="pl-4" align="center">
                     Add More<br/>
