--- a/STSEval/app/templates/app/select_session.html
+++ b/STSEval/app/templates/app/select_session.html
@@ -56,7 +56,7 @@
             $("#modalMainTitle").html("Get Spectator Access");
             $("#modalBodyArea2").hide();
             $("#modalBodyArea1").empty();
-            $("#modalBodyArea1").load("/account/stripe_payment_screen/" + SelectedSession + "/SPECTATE/1", function () {
+            $("#modalBodyArea1").load("/account/stripe_payment_screen/" + SelectedSession + "/SPECTATOR/1", function () {
             });
             $("#modalMain").modal('show');
             $("#modalBodyArea1").show();
