--- a/STSEval/management/templates/management/setup_sponsors.html
+++ b/STSEval/management/templates/management/setup_sponsors.html
@@ -5,7 +5,8 @@
     <h3>{{session_name}}</h3><br/>
     <div>
         <div id="divSponsors" style="vertical-align: top;padding:3px;display:inline-block;margin-right:30px;">
-		    <div id="divSponsorHeader" style="padding-bottom:5px;font-size:22px;font-weight:bold;text-align:center">Sponsors</div>
+		    <div id="divSponsorHeader" style="padding-bottom:5px;font-size:22px;font-weight:bold;text-align:center">Sponsors (optional)</div>
+            Use this page to promote your event sponsors. Advertisements are optional and will be displayed on the spectator screens.
 		    <div id="divSponsorList" class="listbox mb-2" style="width:600px;height:280px;"></div>
 		    <div id="divSponsorButtonsArea">
 		        <button href="#" id="btnSponsorAdd"   type="button" class="btn btn-main management-button"  data-toggle="modal" data-target="#modalMain" onclick="AddSponsorStart()">Add</button>
