--- a/STSEval/app/templates/app/layout.html
+++ b/STSEval/app/templates/app/layout.html
@@ -7,7 +7,7 @@
     {% load staticfiles %}
     <link href="https://vjs.zencdn.net/7.6.6/video-js.css" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="{% static 'app/content/bootstrap.min.css' %}" />
-    <link rel="stylesheet" type="text/css" href="{% static 'app/content/site.css' %}?v=1.40" />
+    <link rel="stylesheet" type="text/css" href="{% static 'app/content/site.css' %}?v=1.41" />
     <link rel="shortcut icon" href="{% static 'app/images/favicon.png' %}"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <div id="divFullScreen">
+    <div id="divFullScreen" class="d-flex flex-column" style="height:100vh">
         <div class="navbar navbar-dark navbar-expand-xl" style="padding:.0rem 1rem">
             <div class="container-fluid">
                 <div class="d-flex order-0">
@@ -96,9 +96,10 @@
         <div id="divScreenContainer" class="container-fluid body-content">
     {% block content %}{% endblock %}
 
-                <div align="center">STS Results &copy;2020</div>
+                
 
         </div>
+        <div align="center" style="flex-grow:1;display:flex;align-items:flex-end;justify-content:center"><div>STS Results &copy;2020</div></div>
     </div>
 <div class="modal fade" id="modalMain" tabindex="-1" role="dialog" aria-labelledby="modalMainTitle" aria-hidden="true">
   <div id="modalMainDoc" class="modal-dialog modal-lg" role="document">
