stripe test mode setup

--- a/STSEval/app/templates/app/backup_video_manage.html
+++ b/STSEval/app/templates/app/backup_video_manage.html
@@ -2,9 +2,10 @@
 
 {% block content %}
 <div align="center" style="margin:10px;padding:0">
-    <h2>Manage Exercise Video Backups</h2>
+     <h3>{{session.full_name}}</h3>
+    <h5>Manage Exercise Video Backups</h5>
     <div>
-        <div id="divBackupVideos" style="vertical-align: top;padding:3px;display:inline-block;margin-right:30px;">
+        <div id="divBackupVideos" style="vertical-align: top;padding:3px;display:inline-block;">
 		    <div id="divBackupVideosHeader" style="padding-bottom:5px;font-size:22px;font-weight:bold;text-align:center">Backup Videos</div>
 		    <div id="divBackupVideoList" class="listbox mb-2" style="width:400px;height:140px;"></div>
 		    <div id="divBackupVideoButtonsArea">
