--- a/STSEval/management/templates/management/session_management.html
+++ b/STSEval/management/templates/management/session_management.html
@@ -21,11 +21,11 @@
         </div>
 
         <div class="col-3 pr-4 mt-4" align="right">
-             <h2>Access Code</h2>
+             <h2>Spectators</h2>
         </div>
         <div class="col-8 pt-2 pl-2 mt-4" align="left">
-            <span class="muted-text">Manage your spectator access code here.</span><br/>
-            <a href="/management/spectator_management/{{session.id}}"><button href="#"  type="button" class="btn btn-main mt-2">Access Code</button></a>
+            <span class="muted-text">Manage your spectator access code here and view a list of spectators.</span><br/>
+            <a href="/management/spectator_management/{{session.id}}"><button href="#"  type="button" class="btn btn-main mt-2">Spectator Management</button></a>
         </div>
 
         <div class="col-3 pr-4 mt-4" align="right">
