--- a/STSEval/app/templates/app/layout.html
+++ b/STSEval/app/templates/app/layout.html
@@ -58,7 +58,7 @@
                                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                             <a class="dropdown-item" href="/overview/{{request.session.session}}">overview</a>
                                             <a class="dropdown-item" href="/management/setup_judges/{{request.session.session}}">setup</a>
-                                            <a class="dropdown-item" href="/management/spectator_management/{{request.session.session}}">access code</a>
+                                            <a class="dropdown-item" href="/management/spectator_management/{{request.session.session}}">spectator management</a>
                                             <a class="dropdown-item" href="/backup_video_manage/{{request.session.session}}/">backup videos</a>
                                         </div>
                                     </li>
