upcoming drop down

--- a/STSEval/app/templates/app/select_session.html
+++ b/STSEval/app/templates/app/select_session.html
@@ -4,8 +4,7 @@
 <div align="center" style="margin:10px;padding:0">
     <select id="selFilter" class="selectpicker" data-style="btn-main" onchange="FilterChange()" >
         <option value="completed">Completed</option>
-        <option value="active" selected>Active Today</option>
-        <option value="future">Future</option>
+        <option value="upcoming" selected>Upcoming</option>
         <option value="purchased">Purchased</option>
     </select>
     <div>
